[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/simple_shapes/toolbar.gd" type="Script" id=1]

[node name="SimpleShapeToolbar" type="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0
script/script = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 3.0
margin/bottom = 40.0

[node name="SelectShape" type="OptionButton" parent="."]

rect/min_size = Vector2( 120, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 0.0
margin/right = 127.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<Shape>"
flat = false
align = 0
selected = 0
items = [ "<Shape>", null, false, -1, null, "Rectangle", null, false, -1, null, "Ellipse", null, false, -1, null, "Star", null, false, -1, null ]

[node name="SpinBox" type="SpinBox" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 131.0
margin/top = 0.0
margin/right = 205.0
margin/bottom = 40.0
range/min = 3.0
range/max = 32.0
range/step = 1.0
range/page = 0.0
range/value = 3.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[connection signal="item_selected" from="SelectShape" to="." method="_on_SelectShape_item_selected"]

[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]


